--- a/tasks/kibana-RedHat.yml
+++ b/tasks/kibana-RedHat.yml
@@ -67,12 +67,27 @@
   retries: 5
   delay: 10
 
-- name: RedHat - Install Kibana from url
+
+- name: RedHat - Install Kibana from url - x86_64
   become: yes
   yum:
     name: >
       {% if kibana_custom_package_url is defined %}{{ kibana_custom_package_url }}
       {% else %}{{ kibana_package_url }}-{{ es_version }}-x86_64.rpm{% endif %}
+    state: present
+  when: not es_use_repository
+  register: kibana_install_from_package
+  notify: restart kibana
+  until: kibana_install_from_package is not failed
+  retries: 5
+  delay: 10
+
+- name: RedHat - Install Kibana from url - aarch
+  become: yes
+  yum:
+    name: >
+      {% if kibana_custom_package_url is defined %}{{ kibana_custom_package_url }}
+      {% else %}{{ kibana_package_url }}-{{ es_version }}-aarch64.rpm{% endif %}
     state: present
   when: not es_use_repository
   register: kibana_install_from_package
